Update build system and GUI for enhanced features
- CMakeLists.txt: Add Vulkan dependency for GPU rendering
- main_gui_2d.py: Enhanced GUI with P3 basis function support
- viz_2d.py: Updated visualization utilities for new data structures
- Support for configurable solver parameters and advanced options
- Integration with Vulkan rendering pipeline for real-time visualization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,9 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(PETSC REQUIRED petsc)
 find_package(Boost REQUIRED COMPONENTS numeric_ublas)
 find_library(GMSH_LIBRARY gmsh)
+find_package(Vulkan REQUIRED)
 
-include_directories(${PETSC_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} include)
+include_directories(${PETSC_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} include ${Vulkan_INCLUDE_DIRS})
 link_directories(${PETSC_LIBRARY_DIRS})
 
 add_library(simulator SHARED
@@ -21,7 +22,7 @@ add_library(simulator SHARED
     src/2d/dg/unstructured/driftdiffusion_dg_unstruct_2d.cpp
 )
 
-target_link_libraries(simulator ${PETSC_LIBRARIES} ${Boost_LIBRARIES} ${GMSH_LIBRARY})
+target_link_libraries(simulator ${PETSC_LIBRARIES} ${Boost_LIBRARIES} ${GMSH_LIBRARY} ${Vulkan_LIBRARIES})
 
 install(TARGETS simulator DESTINATION lib)
 install(DIRECTORY include/ DESTINATION include)
