Implement Advanced AMR Algorithms and Performance Optimizations
ADVANCED FEATURES IMPLEMENTATION:
=================================

🔬 ADAPTIVE MESH REFINEMENT (AMR):
- Complete AMR framework with multiple error estimators
- Kelly, Gradient-based, Residual-based, ZZ error estimation
- Anisotropic refinement for boundary layer detection
- Error equilibration and fixed-fraction strategies
- Mesh quality metrics and validation
- Element refinement/coarsening with proper interpolation

🚀 PERFORMANCE OPTIMIZATION FRAMEWORK:
- SIMD-optimized kernels with AVX2/FMA support
- OpenMP parallel computing with thread pools
- Cache-friendly data structures and memory pools
- Block matrix storage for improved cache locality
- Profiling infrastructure with automatic timing

⚡ SIMD ACCELERATION:
- AVX2-optimized vector operations (dot product, addition, scaling)
- Vectorized basis function evaluation for P3 elements
- SIMD matrix-vector multiplication
- Hardware capability detection (AVX2, FMA, AVX512)
- Fallback implementations for compatibility

🔧 PARALLEL COMPUTING:
- OpenMP-based parallel matrix assembly
- Thread-safe error estimation algorithms
- Parallel carrier density computations
- Dynamic load balancing with work stealing
- NUMA-aware memory allocation

💾 MEMORY OPTIMIZATIONS:
- Aligned memory allocation for SIMD operations
- Memory pools for frequent allocations
- Block matrix storage for cache efficiency
- Smart pointer management with RAII
- Peak memory usage tracking

🎯 ALGORITHMIC IMPROVEMENTS:
- Fast multipole method for long-range interactions
- Sparse matrix optimizations (CSR format)
- Incomplete LU preconditioning
- Reverse Cuthill-McKee ordering
- Algebraic multigrid setup

📊 PERFORMANCE MONITORING:
- Comprehensive profiling with scope timers
- Hardware detection and optimization suggestions
- Performance analysis and bottleneck identification
- Automatic optimization application
- Real-time performance metrics

🏗️ BUILD SYSTEM ENHANCEMENTS:
- Optimized compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,21 @@ project(SemiconductorSimulator)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Performance optimization flags
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -mtune=native -ffast-math -DNDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -Wall -Wextra -DDEBUG")
+
+# Enable SIMD and vectorization
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -mfma")
+endif()
+
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(PETSC REQUIRED petsc)
 find_package(Boost REQUIRED COMPONENTS numeric_ublas)
 find_library(GMSH_LIBRARY gmsh)
 find_package(Vulkan REQUIRED)
+find_package(OpenMP REQUIRED)
 
 include_directories(${PETSC_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} include ${Vulkan_INCLUDE_DIRS})
 link_directories(${PETSC_LIBRARY_DIRS})
@@ -22,9 +32,25 @@ add_library(simulator SHARED
     src/unstructured/driftdiffusion_unstruct_2d.cpp
     src/dg_math/dg_basis_functions.cpp
     src/dg_math/dg_assembly.cpp
+    src/amr/amr_algorithms.cpp
+    src/performance/simd_kernels.cpp
+    src/performance/parallel_computing.cpp
 )
 
-target_link_libraries(simulator ${PETSC_LIBRARIES} ${Boost_LIBRARIES} ${GMSH_LIBRARY} ${Vulkan_LIBRARIES})
+target_link_libraries(simulator
+    ${PETSC_LIBRARIES}
+    ${Boost_LIBRARIES}
+    ${GMSH_LIBRARY}
+    ${Vulkan_LIBRARIES}
+    OpenMP::OpenMP_CXX
+)
+
+# Set target properties for optimization
+set_target_properties(simulator PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED ON
+    POSITION_INDEPENDENT_CODE ON
+)
 
 install(TARGETS simulator DESTINATION lib)
 install(DIRECTORY include/ DESTINATION include)
