🔧 DEVICE GEOMETRY REFINEMENT + AUTHOR UPDATES: Improved physics and smooth I-V curves
DEVICE GEOMETRY IMPROVEMENTS:
✅ Proper MOSFET device structure definition:
  - Source region: 0 to 25% of channel length (at TOP surface)
  - Channel region: 25% to 75% of channel length (under gate)
  - Drain region: 75% to 100% of channel length (at TOP surface)
  - Surface depth: 67% to 100% of device width (near gate-oxide)
  - Substrate depth: 0 to 67% of device width (bulk region)

✅ Enhanced carrier density calculation:
  - Proper doping assignment based on device geometry
  - Realistic N+ source/drain positioning at surface
  - P-type channel and substrate regions correctly defined
  - Detailed geometry logging with nm/μm units
  - Region-specific physics parameter assignment

I-V PLOT REFINEMENT FOR SMOOTH CURVES:
✅ Doubled grid resolution for smooth I-V characteristics:
  - Gate voltage: 8 → 16 points (0V to 1.5V)
  - Drain voltage: 15 → 31 points (0V to 1.5V)
  - Total simulation points: 120 → 496 points
  - Smooth curve generation with higher resolution

✅ Enhanced I-V visualization:
  - Output characteristics: Plot every 3rd Vg for clarity
  - Transfer characteristics: Plot every 5th Vd for clarity
  - Smooth line plots with markers for data points
  - Professional styling with 2.5px line width
  - Improved legends with 2 decimal precision

COMPREHENSIVE AUTHOR ATTRIBUTION:
✅ Updated all source files with proper authorship:
  - Python GUI files: gui/modern_mosfet_gui.py
  - Launcher scripts: run_modern_gui.py
  - Example files: comprehensive_mosfet_validation.py, run_validation_demo.py
  - Visualization scripts: create_validation_visualization.py
  - C++ headers: src/physics/advanced_physics.hpp
  - C++ implementation: src/physics/advanced_physics.cpp
  - Build system: CMakeLists.txt, python/setup.py
  - Documentation: README.md with author prominence
  - Citation: Updated BibTeX entry with correct author

✅ Professional documentation updates:
  - Author prominently di

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SemiDGFEM - Advanced Semiconductor Device Simulator
+# Author: Dr. Mazharuddin Mohammed
+
 cmake_minimum_required(VERSION 3.10)
 project(SemiconductorSimulator)
 
