--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,30 +8,18 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.9"
-    # You can also specify other tools here
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
-  fail_on_warning: true
+  fail_on_warning: false
 
 # Optionally build your docs in additional formats such as PDF and ePub
 formats:
   - pdf
   - epub
 
-# Optional but recommended, declare the Python requirements required
-# to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+# Python requirements for building documentation
 python:
   install:
     - requirements: docs/requirements.txt
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
-
-# Set the version of Python and other tools you might need
-submodules:
-  include: all
-  recursive: true
