--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,6 +8,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.9"
+  jobs:
+    post_create_environment:
+      - pip install --upgrade pip setuptools wheel
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
