--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,5 @@
 # Documentation requirements for SemiDGFEM ReadTheDocs
 sphinx>=4.0.0,<6.0.0
 sphinx-rtd-theme>=1.0.0
+myst-parser>=0.18.0
+sphinx-autodoc-typehints>=1.12.0
