Add comprehensive self-consistent solver framework and material database
- Implement SelfConsistentSolver class with iterative coupling of Poisson, drift-diffusion, and transport equations
- Add comprehensive MaterialDatabase with temperature-dependent properties for Si, GaAs, Ge, SiC, GaN, InGaAs
- Include convergence criteria, damping, and advanced physics options (energy transport, hydrodynamic, quantum corrections)
- Implement recombination models (SRH, radiative, Auger) and impact ionization
- Add C interface for Python bindings
- Complete material property calculations with Caughey-Thomas mobility models and Varshni bandgap temperature dependence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,8 @@ set(SIMULATOR_SOURCES
     src/physics/advanced_physics.cpp
     src/physics/advanced_transport.cpp
     src/transient/transient_solver.cpp
+    src/selfconsistent/self_consistent_solver.cpp
+    src/materials/material_properties.cpp
 )
 
 # Add CUDA sources if enabled
